<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verticalSwitch"
        android:id="@+id/verticalModeSwitch"
        android:layout_marginTop="24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_time"
        android:id="@+id/pickTimeBtn"
        android:onClick="showTimePickerDialog"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:onClick="showDatePickerDialog"
        android:id="@+id/pickDateBtn"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"/>

</LinearLayout>